fixed course view content alignment

--- a/themes/egghead-theme/source/css/course-card.css
+++ b/themes/egghead-theme/source/css/course-card.css
@@ -94,5 +94,5 @@
     text-shadow: grey;
 }
 .content-post{
-  max-width: 1400px;
+  
 }
